--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -39,43 +39,47 @@
       <LinkTo id="encryptable-row-title" class="col-3 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
         {{@encryptable.name}}
       </LinkTo>
-      {{#if (lte getAttributesAmount 2)}}
+      {{#if (and (lte getAttributesAmount 2) (gt getAttributesAmount 0))}}
         {{#if @encryptable.usedAttrs.username}}
-          <div class="mr-2 w-30">
+          <div class="mr-2 w-20 ml-5">
             <Encryptable::AttributeField @attribute="username" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.password}}
-          <div class="mr-2 w-30">
+          <div class="mr-2 w-20 ml-5">
             <Encryptable::AttributeField @attribute="password" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.email}}
-          <div class="mr-2 w-30">
+          <div class="mr-2 w-20 ml-5">
             <Encryptable::AttributeField @attribute="email" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.token}}
-          <div class="mr-2 w-30">
+          <div class="mr-2 w-20 ml-5">
             <Encryptable::AttributeField @attribute="token" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.pin}}
-          <div class="mr-2 w-30">
+          <div class="mr-2 w-20 ml-5">
             <Encryptable::AttributeField @attribute="pin" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
         {{#if @encryptable.usedAttrs.custom_attr}}
-          <div class="mr-2 w-30">
+          <div class="mr-2 w-20 ml-5">
             <Encryptable::AttributeField @attribute="customAttr" @row={{true}} @encryptable={{@encryptable}} @visibleByDefault={{false}}/>
           </div>
         {{/if}}
       {{else}}
-        <LinkTo class="col-6 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
+        <LinkTo class="col-6 underline-hover break-words account-link mt-3 mb-3 ml-5 p-0" @route="encryptables.show" @model={{@encryptable.id}}>
           {{t "encryptable/credentials.row.clickToSeeAttrs"}}
         </LinkTo>
       {{/if}}
       <div class="col-md-auto d-none d-md-block encryptable-row-icons ml-auto">
+        <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
+          <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
+          <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="1000" />
+        </a>
         <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
           <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
           <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="1000" />
