--- a/frontend/app/templates/components/encryptable/form.hbs
+++ b/frontend/app/templates/components/encryptable/form.hbs
@@ -81,174 +81,67 @@
           </div>
           <div class="encryptable-form-attributes">
             <div class="row">
-              {{#if this.isUsernameFieldActive}}
-                <div id="username-field" class="col-md-6 pt-2 encryptable-form-field">
-                  <form.group class="col-md-12">
-                    <form.element @label={{t "username"}} id="username" class={{if
-                      this.changeset.error.cleartextUsername.validation "invalid-input-name"}}
-                                  @property="cleartextUsername" @customError={{t
-                      (validation-error-key this.changeset.error.cleartextUsername.validation)}} as |el|>
+              {{#each this.activeFields as |attribute|}}
+                <div id="{{attribute}}-field" class="col-md-6 pt-2 encryptable-form-field {{if (eq attribute "customAttr")  "border-1 border border-mute border-radius-4"}}">
+                  {{#if (eq attribute "customAttr")}}
+                    <form.group class="col-md-12">
+                      <form.element @label={{t "labelCustomAttr"}} id="labelCustomAttr" class={{if
+                        this.changeset.error.cleartextCustomAttrLabel.validation "invalid-input-name"}}
+                                    @property="cleartextCustomAttrLabel" @customError={{t
+                        (validation-error-key this.changeset.error.cleartextCustomAttrLabel.validation)}} as |el|>
+                        <a class="position-absolute encrypted-icon">
+                          {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
+                          <BsTooltip @title={{t "encryptable/credentials.form.notEncryptedField"}} @delayShow="300" @viewportSelector="modal"/>
+                          <img class="d-inline-block"
+                               src="/assets/images/not_encrypted_small.svg" alt="not encrypted value">
+                        </a>
+                        <el.control @name="label" tabindex="2"></el.control>
+                      </form.element>
+                    </form.group>
+                    <button class="btn btn-danger d-inline-block p-1 delete-field" {{on "click"
+                                                                                        (action "removeField" "customAttr")}}>
+                      <img id="remove-customAttr-field-button" class="d-inline" src="/assets/images/delete-white.svg"
+                           alt="delete attribute field">
+                    </button>
+                  {{/if}}
+                  <form.group class="col-md-12 {{if (eq attribute "password") "secret password-field"}}">
+                    <form.element @label={{t attribute}} id={{attribute}} class={{if
+                      (get (get this.changeset.error (concat "cleartext" (capitalize attribute))) "validation") "invalid-input-name"}}
+                                  @property="cleartext{{capitalize attribute}}" @customError={{t
+                      (validation-error-key (get (get this.changeset.error (concat "cleartext" (capitalize attribute))) "validation"))}} as |el|>
                       <a class="position-absolute encrypted-icon">
                         {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
                         <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
                         <img class="d-inline-block"
                              src="/assets/images/encrypted_small.svg" alt="encrypted value">
                       </a>
-                      <el.control @name="cleartextUsername" tabindex="2"></el.control>
+                      <el.control autocomplete="off" @name="cleartext{{capitalize attribute}}" tabindex="2"></el.control>
                     </form.element>
                   </form.group>
                   <button class="btn btn-danger d-inline-block p-1 delete-field" {{on "click"
-                                                                                      (action "removeField" "username")}}>
-                    <img id="remove-username-field-button" class="d-inline" src="/assets/images/delete-white.svg"
+                                                                                      (action "removeField" attribute)}}>
+                    <img id="remove-{{attribute}}-field-button" class="d-inline" src="/assets/images/delete-white.svg"
                          alt="delete attribute field">
                   </button>
+                  {{#if (eq attribute "password")}}
+                    <PasswordStrengthMeter class="col-12 col-lg-9 px-0 mb-2 mb-md-0 ml-3"
+                                           @password={{this.changeset.cleartextPassword}}/>
+                    <div></div>
+                    <button class="btn btn-secondary btn-block col-lg-7 mb-md-4 ml-3 mt-2" {{on "click"
+                                                                                                this.setRandomPassword}}
+                            tabindex="4">
+                      {{t "encryptable/credentials.edit.random_password"}}
+                    </button>
+                  {{/if}}
                 </div>
-              {{/if}}
-              {{#if this.isPasswordFieldActive}}
-                <div id="password-field" class="col-md-6 pt-2 encryptable-form-field">
-                  <form.group class="col-md-12 secret password-field">
-                    <form.element @label={{t "password"}} id="cleartext-password" class={{if
-                      this.changeset.error.cleartextPassword.validation "invalid-input-name"}}
-                                  @property="cleartextPassword" @customError={{t
-                      (validation-error-key this.changeset.error.cleartextPassword.validation)}} as |el|>
-                      <a class="position-absolute encrypted-icon">
-                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
-                        <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
-                        <img class="d-inline-block"
-                             src="/assets/images/encrypted_small.svg" alt="encrypted value">
-                      </a>
-                      <el.control autocomplete="off" @name="cleartextPassword"
-                                  tabindex="2"></el.control>
-                    </form.element>
-                  </form.group>
-                  <button class="btn btn-danger d-inline-block p-1 delete-field" {{on "click"
-                                                                                      (action "removeField" "password")}}>
-                    <img id="remove-password-field-button" class="d-inline" src="/assets/images/delete-white.svg"
-                         alt="delete attribute field">
-                  </button>
-                  <PasswordStrengthMeter class="col-12 col-lg-9 px-0 mb-2 mb-md-0 ml-3"
-                                         @password={{this.changeset.cleartextPassword}}/>
-                  <div></div>
-                  <button class="btn btn-secondary btn-block col-lg-7 mb-md-4 ml-3 mt-2" {{on "click"
-                                                                                              this.setRandomPassword}}
-                          tabindex="4">
-                    {{t "encryptable/credentials.edit.random_password"}}
-                  </button>
-                </div>
-              {{/if}}
-              {{#if this.isTokenFieldActive}}
-                <div id="token-field" class="col-md-6 pt-2 encryptable-form-field">
-                  <form.group class="col-md-12">
-                    <form.element @label={{t "token"}} id="token" class={{if
-                      this.changeset.error.cleartextToken.validation "invalid-input-name"}}
-                                  @property="cleartextToken" @customError={{t
-                      (validation-error-key this.changeset.error.cleartextToken.validation)}} as |el|>
-                      <a class="position-absolute encrypted-icon">
-                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
-                        <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
-                        <img class="d-inline-block"
-                             src="/assets/images/encrypted_small.svg" alt="encrypted value">
-                      </a>
-                      <el.control @name="cleartextToken" tabindex="2"></el.control>
-                    </form.element>
-                  </form.group>
-                  <button class="btn btn-danger d-inline-block p-1 delete-field" {{on "click"
-                                                                                      (action "removeField" "token")}}>
-                    <img id="remove-token-field-button" class="d-inline" src="/assets/images/delete-white.svg"
-                         alt="delete attribute field">
-                  </button>
-                </div>
-              {{/if}}
-              {{#if this.isPinFieldActive}}
-                <div id="pin-field" class="col-md-6 pt-2 encryptable-form-field">
-                  <form.group class="col-md-12">
-                    <form.element @label={{t "pin"}} id="pin" class={{if
-                      this.changeset.error.cleartextPin.validation "invalid-input-name"}}
-                                  @property="cleartextPin" @customError={{t
-                      (validation-error-key this.changeset.error.cleartextPin.validation)}} as |el|>
-                      <a class="position-absolute encrypted-icon">
-                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
-                        <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
-                        <img class="d-inline-block"
-                             src="/assets/images/encrypted_small.svg" alt="encrypted value">
-                      </a>
-                      <el.control @name="cleartextPin" tabindex="2"></el.control>
-                    </form.element>
-                  </form.group>
-                  <button class="btn btn-danger d-inline-block p-1 delete-field" {{on "click"
-                                                                                      (action "removeField" "pin")}}>
-                    <img id="remove-pin-field-button" class="d-inline" src="/assets/images/delete-white.svg"
-                         alt="delete attribute field">
-                  </button>
-                </div>
-              {{/if}}
-              {{#if this.isEmailFieldActive}}
-                <div id="email-field" class="col-md-6 pt-2 encryptable-form-field">
-                  <form.group class="col-md-12">
-                    <form.element @label={{t "email"}} id="email" class={{if
-                      this.changeset.error.cleartextEmail.validation "invalid-input-name"}}
-                                  @property="cleartextEmail" @customError={{t
-                      (validation-error-key this.changeset.error.cleartextEmail.validation)}} as |el|>
-                      <a class="position-absolute encrypted-icon">
-                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
-                        <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
-                        <img class="d-inline-block"
-                             src="/assets/images/encrypted_small.svg" alt="encrypted value">
-                      </a>
-                      <el.control @name="cleartextEmail" tabindex="2"></el.control>
-                    </form.element>
-                  </form.group>
-                  <button class="btn btn-danger d-inline-block p-1 delete-field" {{on "click"
-                                                                                      (action "removeField" "email")}}>
-                    <img id="remove-email-field-button" class="d-inline" src="/assets/images/delete-white.svg"
-                         alt="delete attribute field">
-                  </button>
-                </div>
-              {{/if}}
-              {{#if this.isCustomAttrFieldActive}}
-                <div id="custom-attr-field" class="col-md-6 pt-2 encryptable-form-field border-1 border border-mute border-radius-4">
-                  <form.group class="col-md-12">
-                    <form.element @label={{t "labelCustomAttr"}} id="labelCustomAttr" class={{if
-                      this.changeset.error.cleartextCustomAttr.validation "invalid-input-name"}}
-                                  @property="cleartextCustomAttrLabel" @customError={{t
-                      (validation-error-key this.changeset.error.cleartextCustomAttrLabel.validation)}} as |el|>
-                      <a class="position-absolute encrypted-icon">
-                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
-                        <BsTooltip @title={{t "encryptable/credentials.form.notEncryptedField"}} @delayShow="300" @viewportSelector="modal"/>
-                        <img class="d-inline-block"
-                             src="/assets/images/not_encrypted_small.svg" alt="not encrypted value">
-                      </a>
-                      <el.control @name="label" tabindex="2"></el.control>
-                    </form.element>
-                  </form.group>
-                  <button class="btn btn-danger d-inline-block p-1 delete-field" {{on "click"
-                                                                                      (action "removeField" "customAttr")}}>
-                    <img id="remove-customAttr-field-button" class="d-inline" src="/assets/images/delete-white.svg"
-                         alt="delete attribute field">
-                  </button>
-                  <form.group class="col-md-12">
-                    <form.element @label={{t "valueCustomAttr"}} id="valueCustomAttr" class={{if
-                      this.changeset.error.cleartextCustomAttr.validation "invalid-input-name"}}
-                                  @property="cleartextCustomAttr" @customError={{t
-                      (validation-error-key this.changeset.error.cleartextCustomAttr.validation)}} as |el|>
-                      <a class="position-absolute encrypted-icon">
-                        {{!-- Bind Popper to modal with viewportSelector, more information: https://www.ember-bootstrap.com/api/classes/Components.Tooltip.html#property_viewportPadding--}}
-                        <BsTooltip @title={{t "encryptable/credentials.form.encryptedField"}} @delayShow="300" @viewportSelector="modal"/>
-                        <img class="d-inline-block"
-                             src="/assets/images/encrypted_small.svg" alt="encrypted value">
-                      </a>
-                      <el.control @name="value" tabindex="2"></el.control>
-                    </form.element>
-                  </form.group>
-                </div>
-              {{/if}}
+              {{/each}}
             </div>
-            {{#if (gt this.items.length 0)}}
+            {{#if (gt this.inactiveFields.length 0)}}
               <div class="ml-3 mb-2 mt-3">{{t "additionalField"}}</div>
               <div class="d-flex flex-row">
                 <PowerSelect
                   id="add-field-dropdown"
-                  @options={{this.items}}
+                  @options={{this.inactiveFields}}
                   @placeholder={{t "additionalFieldPlaceholder"}}
                   @renderInPlace={{true}}
                   @selected={{this.selected}}
