--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -75,7 +75,7 @@
           {{t "encryptable/credentials.row.clickToSeeAttrs"}}
         </LinkTo>
       {{/if}}
-      <div class="col-md-auto d-none d-md-block encryptable-row-icons ml-auto">
+      <div class="col-md-auto d-none d-md-none d-lg-none d-xl-block encryptable-row-icons ml-auto">
         <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
           <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
           <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="1000" />
