--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -89,7 +89,7 @@
         </div>
       </div>
     {{/if}}
-    <div class="encryptable-attributes">
+    <div class="encryptable-attributes w-50">
       {{#if @encryptable.cleartextUsername}}
         <Encryptable::AttributeField @row={{false}} @attribute="username" @encryptable={{@encryptable}} @visibleByDefault={{true}}/>
       {{/if}}
