--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -14,6 +14,7 @@ $font-family-sans-serif: var(--pzsh-font-family) !default;
 @import "changelog";
 @import "side-nav-bar";
 @import "encryptable-show";
+@import "encryptable-row";
 @import "encryptable-form";
 @import "encryptable-entry";
 @import "password-strength-meter";
