revert yarn.lock and use other markdown lib

--- a/frontend/app/templates/components/changelog.hbs
+++ b/frontend/app/templates/components/changelog.hbs
@@ -4,6 +4,7 @@
   </Modal.header>
   <Modal.body>
     <div class="container-fluid">
+      <zero-md src="../../../markdown/CHANGELOG.md"></zero-md>
       {{render-markdown "CHANGELOG"}}
     </div>
   </Modal.body>
