--- a/frontend/app/templates/components/encryptable/attribute-field.hbs
+++ b/frontend/app/templates/components/encryptable/attribute-field.hbs
@@ -7,18 +7,14 @@
     {{/if}}
   </div>
 {{/unless}}
-<div class="hidden-attribute-copy-button">
+<div class="input-group border-tertiary border-1 border border-radius-4 {{if this.args.row "w-100" "w-50 mb-1"}}">
   {{#if this.isAttributeVisible}}
-    <div class="result-hidden-attribute">
-      <Input id="cleartext_{{this.args.attribute}}" class="text-truncate d-inline form-control {{unless this.args.row "w-100" "mt-2 mb-2"}}" @disabled="true" @value={{format-cleartext this.args.encryptable this.args.attribute}}/>
-    </div>
+    <Input id="cleartext_{{this.args.attribute}}" class="text-truncate d-inline form-control" @disabled="true" @value={{format-cleartext this.args.encryptable this.args.attribute}}/>
   {{else}}
-    <a id="show-{{this.args.attribute}}" role="button" class="text-truncate correct-pixel-error-omg show-hidden-attribute-button show-text {{unless this.args.row "w-100" "mt-2 mb-2"}}" {{on "click" (action "showValue")}}>{{t (concat "encryptable/credentials.show.show_" this.args.attribute)}}</a>
+    <span id="show-{{this.args.attribute}}" role="button" class="text-truncate correct-pixel-error-omg show-hidden-attribute-button show-text hidden-attribute-cover" {{on "click" (action "showValue")}}>{{t (concat "encryptable/credentials.show.show_" this.args.attribute)}}</span>
   {{/if}}
-  <div class="col px-0 d-none d-md-none d-lg-none d-xl-block">
-    <button class="btn btn-light copy-btn {{if this.args.row "mt-2 mb-2"}}" {{on "click" this.copyAttribute}}>
-      <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-      <BsTooltip @title={{t (concat "encryptable/credentials.show.copy_" this.args.attribute)}} @delayShow="500" />
-    </button>
-  </div>
+  <button class="btn btn-light btn-outline-secondary rounded-corners-right" type="button" {{on "click" this.copyAttribute}}>
+    <img class="icon-clippy img" src="/assets/images/clipboard.svg" alt="clip">
+    <BsTooltip @title={{t (concat "encryptable/credentials.show.copy_" this.args.attribute)}} @delayShow="500" />
+  </button>
 </div>
