--- a/frontend/app/styles/encryptable-form.scss
+++ b/frontend/app/styles/encryptable-form.scss
@@ -17,9 +17,23 @@
 }
 
 .encrypted-icon {
-  width: 25px;
-  height: 25px;
-  margin-top: 2.4rem;
+  width: 22px;
+  height: 22px;
+}
+
+.encrypted-icon-span {
+  display: flex;
+  align-items: center;
+  padding: 0.375rem 0.5rem;
+  margin-bottom: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #495057;
+  text-align: center;
+  white-space: nowrap;
+  background-color: #e9ecef;
+  border: 1px solid #ced4da;
 }
 
 .form-group label {
@@ -50,4 +64,10 @@
 .d-flex .ember-basic-dropdown {
   width: 36%;
   max-width: 36%;
+}
+
+#encryptable-form-team .ember-basic-dropdown .ember-view,
+#encryptable-form-folder .ember-basic-dropdown .ember-view,
+#encryptable-form-additional-field .ember-basic-dropdown .ember-view {
+  height: 38px !important;
 }
