--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -40,41 +40,41 @@
     <div class="row d-flex flex-row flex-md-row flex-lg-row flex-xl-row align-items-center bg-grey-2 rounded
     encryptable-entry">
       <LinkTo id="encryptable-row-title" class="d-flex align-items-center text-left col-12 col-md-3 col-lg-3
-      col-xl-3 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
+      col-xl-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
         {{@encryptable.name}}
       </LinkTo>
       {{#if (and (lte getAttributesAmount 2) (gt getAttributesAmount 0))}}
-        {{#if @encryptable.usedAttrs.username}}
+        {{#if @encryptable.usedEncryptedDataAttrs.username}}
           <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
             <Encryptable::AttributeField @attribute="username" @row={{true}} @encryptable={{@encryptable}}
                                          @visibleByDefault={{false}}/>
           </div>
         {{/if}}
-        {{#if @encryptable.usedAttrs.password}}
+        {{#if @encryptable.usedEncryptedDataAttrs.password}}
           <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
             <Encryptable::AttributeField @attribute="password" @row={{true}} @encryptable={{@encryptable}}
                                          @visibleByDefault={{false}}/>
           </div>
         {{/if}}
-        {{#if @encryptable.usedAttrs.email}}
+        {{#if @encryptable.usedEncryptedDataAttrs.email}}
           <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
             <Encryptable::AttributeField @attribute="email" @row={{true}} @encryptable={{@encryptable}}
                                          @visibleByDefault={{false}}/>
           </div>
         {{/if}}
-        {{#if @encryptable.usedAttrs.token}}
+        {{#if @encryptable.usedEncryptedDataAttrs.token}}
           <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
             <Encryptable::AttributeField @attribute="token" @row={{true}} @encryptable={{@encryptable}}
                                          @visibleByDefault={{false}}/>
           </div>
         {{/if}}
-        {{#if @encryptable.usedAttrs.pin}}
+        {{#if @encryptable.usedEncryptedDataAttrs.pin}}
           <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
             <Encryptable::AttributeField @attribute="pin" @row={{true}} @encryptable={{@encryptable}}
                                          @visibleByDefault={{false}}/>
           </div>
         {{/if}}
-        {{#if @encryptable.usedAttrs.custom_attr}}
+        {{#if @encryptable.usedEncryptedDataAttrs.custom_attr}}
           <div class="encryptable-container d-none d-md-block d-lg-block d-xl-block mr-0 ml-0 mr-md-2 ml-md-5 mr-lg-2 ml-lg-5 mr-xl-2 ml-xl-2">
             <Encryptable::AttributeField @attribute="customAttr" @row={{true}} @encryptable={{@encryptable}}
                                          @visibleByDefault={{false}}/>
@@ -87,13 +87,13 @@
         </LinkTo>
       {{/if}}
       <div class="col-md-auto d-none d-md-none d-lg-none d-xl-block encryptable-row-icons ml-auto">
-        <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
+        <span class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
           <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
-          <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="1000" />
-        </a>
+          <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="500" />
+        </span>
         <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
           <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
-          <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="1000" />
+          <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="500" />
         </DeleteWithConfirmation>
       </div>
     </div>
