fix styling of received file row

--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -10,20 +10,21 @@
         <img class="icon-medium-button d-inline" src="/assets/images/file.svg" alt="file icon">
       </div>
 
-      <LinkTo class="col-4 underline-hover break-words account-link" @route="encryptables.show"
+      <LinkTo class="d-flex align-items-center text-left col-12 col-md-3 col-lg-3
+      col-xl-4 underline-hover break-words account-link" @route="encryptables.show"
               @model={{@encryptable.id}}>
         {{@encryptable.name}}
       </LinkTo>
 
-      <div class="mx-1">
+      <div>
         <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="file icon">
         <BsTooltip @title={{t "tooltips.sent_by"}} @delayShow="1000" />
       </div>
-      <div class="col-6 d-none d-md-block">
+      <div class="col-3 d-none d-md-block">
         {{@encryptable.sender_name}} / {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}
       </div>
 
-      <div class="col-md-auto d-none d-md-block">
+      <div class="ml-auto col-md-auto d-none d-md-block">
         <a class="mx-1" role="button" href={{this.downloadLink}}>
           <img class="icon-medium-button d-inline" src="/assets/images/file_download.svg" alt="download file">
           <BsTooltip @title={{t "download_file"}} @delayShow="1000" />
