remove line breaker for receiver adn date and change weight of download icon

--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -5,8 +5,8 @@
 </div>
 {{#if this.isShown}}
   {{#if this.isFile}}
-    <div class="row d-flex align-items-center bg-grey-2 rounded encryptable-entry">
-      <div class="mx-1">
+    <div class="row d-flex align-items-center bg-grey-2 rounded encryptable-entry pt-2 pb-2">
+      <div class="mx-1 mt-1 mb-1">
         <img class="icon-medium-button d-inline" src="/assets/images/file.svg" alt="file icon">
       </div>
 
@@ -20,12 +20,12 @@
         <img class="icon-medium-button d-inline" src="/assets/images/member.svg" alt="file icon">
         <BsTooltip @title={{t "tooltips.sent_by"}} @delayShow="1000" />
       </div>
-      <div class="col-3 d-none d-md-block">
+      <div class="col-6 d-none d-md-block">
         {{@encryptable.sender_name}} / {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}
       </div>
 
       <div class="ml-auto col-md-auto d-none d-md-block">
-        <a class="mx-1" role="button" href={{this.downloadLink}}>
+        <a class="mx-1 text-decoration-none" role="button" href={{this.downloadLink}}>
           <img class="icon-medium-button d-inline" src="/assets/images/file_download.svg" alt="download file">
           <BsTooltip @title={{t "download_file"}} @delayShow="1000" />
         </a>
