--- a/frontend/app/templates/components/changelog.hbs
+++ b/frontend/app/templates/components/changelog.hbs
@@ -4,7 +4,9 @@
   </Modal.header>
   <Modal.body>
     <div class="container-fluid">
-      {{render-markdown "CHANGELOG"}}
+      /* eslint-disable no-triple-curlies */
+      {{{text}}}
+      /* eslint-enable no-triple-curlies */
     </div>
   </Modal.body>
   <Modal.footer>
